# MonetDBLite-Java

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  HEADER.html  HEADER.html.in  Makefile  README.md  README.md.in  build_and_upload.sh  build_and_upload.sh.in  compile.bat  compile.sh  travis.yml  versions.sh
compilemonetdblite-container/: Dockerfile
monetdb-java-lite/: build.gradle  build.gradle.in  pom.xml  pom.xml.in
monetdb-java-lite/gradle/wrapper/: gradle-wrapper.properties
monetdb-java-lite/src/main/java/nl/cwi/monetdb/embedded/env/: AbstractConnectionResult.java  MonetDBEmbeddedConnection.java  MonetDBEmbeddedDatabase.java  MonetDBEmbeddedException.java  MonetDBEmbeddedPreparedStatement.java  MonetDBEmbeddedSavePoint.java  MonetDBJavaLiteLoader.java  MonetDBJavaLiteLoader.java.in
monetdb-java-lite/src/main/java/nl/cwi/monetdb/embedded/jdbc/: EmbeddedConnection.java  EmbeddedDataBlockResponse.java  EmbeddedLanguage.java  EmbeddedProtocol.java  JDBCEmbeddedConnection.java
monetdb-java-lite/src/main/java/nl/cwi/monetdb/embedded/mapping/: AbstractColumn.java  AbstractRowSet.java  MonetDBRow.java  MonetDBToJavaMapping.java  NullMappings.java
monetdb-java-lite/src/main/java/nl/cwi/monetdb/embedded/resultset/: ExecResultSet.java  PreparedQueryResultSet.java  QueryResultRowSet.java  QueryResultSet.java
monetdb-java-lite/src/main/java/nl/cwi/monetdb/embedded/tables/: IMonetDBTableBaseIterator.java  IMonetDBTableCursor.java  MonetDBTable.java  MonetDBTableColumn.java  RowIterator.java
monetdb-java-lite/src/main/java/nl/cwi/monetdb/embedded/utils/: ForkJavaProcess.java  Randomizer.java  StringEscaper.java
monetdb-java-lite/src/test/java/nl/cwi/monetdb/tests/: InMemoryTests.java  JDBCTests.java  MonetDBLiteTests.java  RegularAPITests.java
monetdb-java-lite/src/test/java/nl/cwi/monetdb/tests/helpers/: ForkJavaProcess.java  MonetDBJavaLiteTesting.java  TryStartMonetDBEmbeddedDatabase.java
src/: checknulls.c  checknulls.h  converters.c  converters.h  javaids.c  javaids.h  jni.h  jresulset.h  jresultset.c  monetdb_config.h.in  monetdb_config_unix.h  monetdb_config_windows.h  nl_cwi_monetdb_embedded_env_MonetDBEmbeddedConnection.c  nl_cwi_monetdb_embedded_env_MonetDBEmbeddedDatabase.c  nl_cwi_monetdb_embedded_env_MonetDBEmbeddedPreparedStatement.c  nl_cwi_monetdb_embedded_env_MonetDBEmbeddedPreparedStatement.h  nl_cwi_monetdb_embedded_jdbc_EmbeddedDataBlockResponse.c  nl_cwi_monetdb_embedded_jdbc_EmbeddedDataBlockResponse.h  nl_cwi_monetdb_embedded_jdbc_JDBCEmbeddedConnection.c  nl_cwi_monetdb_embedded_jdbc_JDBCEmbeddedConnection.h  nl_cwi_monetdb_embedded_mapping_NullMappings.c  nl_cwi_monetdb_embedded_resultset_QueryResultSet.c  nl_cwi_monetdb_embedded_resultset_QueryResultSet.h  nl_cwi_monetdb_embedded_tables_MonetDBTable.c
src/embeddedjava/: checknulls.c  checknulls.h  converters.c  converters.h  embeddedjvm.c  embeddedjvm.h  javaids.c  javaids.h  jni.h  jresulset.h  jresultset.c  nl_cwi_monetdb_embedded_env_MonetDBEmbeddedConnection.c  nl_cwi_monetdb_embedded_env_MonetDBEmbeddedDatabase.c  nl_cwi_monetdb_embedded_env_MonetDBEmbeddedPreparedStatement.c  nl_cwi_monetdb_embedded_jdbc_EmbeddedDataBlockResponse.c  nl_cwi_monetdb_embedded_jdbc_JDBCEmbeddedConnection.c  nl_cwi_monetdb_embedded_jdbc_JDBCEmbeddedConnection.h  nl_cwi_monetdb_embedded_mapping_NullMappings.c  nl_cwi_monetdb_embedded_mapping_NullMappings.h  nl_cwi_monetdb_embedded_resultset_QueryResultSet.c  nl_cwi_monetdb_embedded_tables_MonetDBTable.c
src/embeddedjava/incwindows/: jni.h
